@startuml 02_global_class_diagram

skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2E74B5
skinparam noteBackgroundColor #FFFDE7
skinparam noteBorderColor #F39C12
skinparam linetype ortho

' ===================== CLASSES =====================

class User {
  + id : String
  + prenom : String
  + nom : String
  + email : String
  + telephone : String
  + password : String
  + role : String
  + actif : Boolean
  + dateCreation : Date
}

class Client {
  + id : String
  + typeClient : String
  + societe : String
  + contact : String
  + prenom : String
  + nom : String
  + email : String
  + telephone : String
  + password : String
  + adresse : String
  + ville : String
  + dateCreation : Date
}

class Equipment {
  + id : String
  + reference : String
  + type : String
  + marque : String
  + modele : String
  + numeroSerie : String
  + description : String
}

class EquipmentImage {
  + id : String
  + filename : String
  + previewUrl : String
  + isMain : Boolean
}

class ClientEquipement {
  + id : String
  + clientId : String
  + equipementId : String
  + dateAchat : Date
  + dateInstallation : Date
  + localisation : String
  + notes : String
}

class Contract {
  + id : String
  + reference : String
  + clientId : String
  + dateDebut : Date
  + dateFin : Date
  + periodicite : String
  + statut : String
  + clientEquipementIds : String[]
}

class Intervention {
  + id : String
  + reference : String
  + type : String
  + clientId : String
  + clientEquipementId : String
  + technicienId : String
  + contractId : String
  + datePrevue : Date
  + dateRealisation : Date
  + statut : String
  + couvertureContrat : Boolean
  + description : String
  + diagnostic : String
  + actionsRealisees : String
  + materielUtilise : String
  + dureeMinutes : Integer
  + observations : String
}

class Panne {
  + id : String
  + reference : String
  + clientId : String
  + clientEquipementId : String
  + dateDeclaration : Date
  + description : String
  + statut : String
  + interventionId : String
}

class PieceJointe {
  + id : String
  + filename : String
  + size : Integer
  + type : String
  + previewUrl : String
}

class Facture {
  + id : String
  + numero : String
  + clientId : String
  + interventionId : String
  + dateEmission : Date
  + montantHT : Float
  + tva : Float
  + montantTTC : Float
  + statut : String
}

class LigneFacture {
  + description : String
  + quantite : Integer
  + prixUnitaire : Float
  + montant : Float
}

' ===================== RELATIONS =====================

Client      "1"    *--  "*"   ClientEquipement : possède >
Equipment   "1"    *--  "*"   ClientEquipement : affecté via >
Equipment   "1"    *--  "*"   EquipmentImage   : possède >
Client      "1"    --   "*"   Contract         : souscrit >
Contract    "*"    --   "*"   ClientEquipement : couvre

ClientEquipement "1" <-- "*" Intervention    : concerne
User             "0..1" -- "*" Intervention  : affecté (technicien)
Contract         "0..1" -- "*" Intervention  : planifie
Panne            "0..1" -- "1" Intervention  : convertie en
Panne            "1"    *--  "*" PieceJointe : contient
Client           "1"    --   "*" Panne       : déclare
Facture          "1"    *--  "*" LigneFacture : contient
Intervention     "1"    --   "0..1" Facture  : facturée par

@enduml